--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,9 @@ unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 
+set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_window_status_style "rounded"
+
 # Vim style pane selection
 bind h select-pane -L
 bind j select-pane -D
@@ -29,15 +32,20 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-set -g @catppuccin_flavour 'mocha'
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
-set -g @plugin 'tmux-plugins/tpm'
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set-option -g status-right ""
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tpm'
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
