--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,14 @@
+# General
 set -g mouse on
+set -g default-terminal "tmux-256color"
+set -g set-clipboard on
+set -g status-interval 3
+set -g history-limit 1000000
 
+# Prefix key settings
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
-
-set -g @catppuccin_flavour 'mocha'
-set -g @catppuccin_window_status_style "rounded"
 
 # Vim style pane selection
 bind h select-pane -L
@@ -27,27 +30,43 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Window and pane index settings
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set-option -g status-right ""
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-
+# Plugins
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor'
 
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# Status bar appearance
+bg="#3B4252"
+default_fg="#D8DEE9" 
+session_fg="#A3BE8C"
+session_selection_fg="#3B4252"
+session_selection_bg="#81A1C1"
+active_window_fg="#88C0D0"
+active_pane_border="#abb2bf"
+
+set -g status-left-length 200   # default: 10
+set -g status-right-length 200  # default: 10
+set -g status-left "#[fg=${session_fg},bold,bg=${bg}]   #S"
+set -g status-right " #{cpu -i 3} |  #{mem} "
+set -g status-justify centre
+set -g status-style "bg=${bg}"
+set -g window-status-format "#[fg=${default_fg},bg=default] #I:#W"
+set -g window-status-current-format "#[fg=${active_window_fg},bg=default]  #I:#W"
+set -g window-status-last-style "fg=${default_fg},bg=default"
+set -g message-command-style "bg=default,fg=${default_fg}"
+set -g message-style "bg=default,fg=${default_fg}"
+set -g mode-style "bg=${session_selection_bg},fg=${session_selection_fg}"
+set -g pane-active-border-style "fg=${active_pane_border},bg=default"
+set -g pane-border-style "fg=brightblack,bg=default"
 
 run '~/.tmux/plugins/tpm/tpm'
